新增衣服项

--- a/src/components/clothes/clothes.less
+++ b/src/components/clothes/clothes.less
@@ -27,3 +27,11 @@
         }
     }
 }
+
+.add-container {
+    .img-uploader {
+        display: inline-block;
+        width: 100px;
+        height: 100px;
+    }
+}
