--- a/src/less/common.less
+++ b/src/less/common.less
@@ -1,8 +1,9 @@
 :root {
-	--theme-color: #00d415;
-	--theme-color-rgb: 0, 212, 21;
+	--theme-color: #00d415; // 主题色
+	--theme-color-rgb: 0, 212, 21; // 主题色rgb
 }
 
+// 提示文字色
 .tip {
 	color: #c8c8c8;
 }
