--- a/src/components/menu/navigation.less
+++ b/src/components/menu/navigation.less
@@ -26,6 +26,10 @@
 
     .ant-menu {
         border-inline-end: none !important;
+        &.simple .ant-menu-item {
+            display: inline-flex;
+            justify-content: center;
+        }
     }
 
     .ant-menu-item-selected {
