--- a/src/index.less
+++ b/src/index.less
@@ -17,21 +17,6 @@ code {
 
 #root {
 	height: 100%;
-	overflow: scroll;
+	overflow: hidden;
 	background-color: @background;
-}
-
-.claire-home {
-	padding: 20px;
-
-	.claire-navigation {
-		height: calc(100vh - 40px);
-		min-width: 200px;
-	}
-
-	.claire-content {
-		padding-left: 20px;
-		height: calc(100vh - 40px);
-		min-width: 800px;
-	}
 }
